--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "next": "14.1.3",
     "pg": "^8.11.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-window": "^1.8.10",
     "recharts": "^2.12.2"
   },
